# systemdrs

./: .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: ci.yml
src/: lib.rs  notify.rs  properties.rs  socket.rs
